예외처리 부분 리팩토링(WebApiExRateProvider 클래스관련)